# IntroDXR

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  SetupDirectories.bat
code/: IntroDXR.sln
code/1_Basic/: Basic.cpp  Basic.vcxproj  Basic.vcxproj.filters  CMakeLists.txt  files.txt
code/2_Lighting/: Lighting.cpp  Lighting.vcxproj  README.md  pch.hpp
code/2_Lighting/Shaders/: RaytracingLighting.hlsl  Shared.hpp
code/3_Raytraced_Shadows/: README.md  Shadows.cpp  Shadows.vcxproj
code/3_Raytraced_Shadows/Shaders/: RaytracingShadows.hlsl  Shared.hpp
code/4_Raytraced_Reflections/: README.md  Reflections.cpp  Reflections.filters  Reflections.vcxproj  Reflections.vcxproj.filters  pch.cpp
code/4_Raytraced_Reflections/Shaders/: RaytracingReflections.hlsl  Shared.hpp
code/5_Intersection_Shader/: Intersection.cpp  Intersection.vcxproj  README.md
code/5_Intersection_Shader/Shaders/: RaytracingIntersection.hlsl  Shared.hpp
code/Basic/: Basic.cpp  Basic.vcxproj  Basic.vcxproj.filters  pch.hpp
code/Basic/Shaders/: RaytracingBasic.hlsl
code/DXR/: DXR.vcxproj  DXR.vcxproj.filters  Main.cpp  pch.cpp  pch.hpp
code/DXR/Renderer/: Helper.cpp  Helper.hpp  Renderer.cpp  Renderer.hpp
code/DXR/Renderer/Attributes/: CommandQueue.hpp  DescriptorHeap.hpp  Device.cpp  Device.hpp  Mesh.cpp  Mesh.hpp  RaytracingPipeline.cpp  RaytracingPipeline.hpp  SwapChain.cpp  TLAS.cpp  TLAS.hpp  Texture.hpp
code/DXR/Renderer/Shaders/: RaytracingBasic.hlsl  RaytracingBasic_Debug.hpp  RaytracingBasic_Release.hpp  RaytracingCommon.hlsli  RaytracingMesh_Debug.hpp  Shared.hpp
code/DXR/Utils/: Assert.hpp  CLI.cpp  CLI.hpp  Error.cpp
code/DXRCore/: CMakeLists.txt  DXR.vcxproj  DXR.vcxproj.filters  Main.cpp  pch.cpp  pch.hpp
code/DXRCore/Renderer/: Helper.cpp  Helper.hpp  Renderer.cpp  Renderer.hpp  SDKSettings.hpp
code/DXRCore/Renderer/Attributes/: CommandQueue.cpp  DescriptorHeap.cpp  Device.cpp  Device.hpp  Mesh.cpp  Mesh.hpp  ProceduralPrimitive.cpp  ProceduralPrimitive.hpp  RaytracingPipeline.cpp  RaytracingPipeline.hpp  SwapChain.cpp  SwapChain.hpp  TLAS.cpp  TLAS.hpp  Texture.cpp
code/DXRCore/Utils/: Assert.cpp  Assert.hpp  Error.hpp
code/Lighting/: Lighting.cpp  Lighting.vcxproj  Lighting.vcxproj.filters  README.md
code/Lighting/Shaders/: RaytracingLighting.hlsl  Shared.hpp
code/ShaderCompilation/ShaderCompilation/: ShaderCompilation.vcxproj  ShaderCompilation.vcxproj.filters
